# rust-webgl-boilerplate

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  main.js  package-lock.json  package.json  webpack.config.js
src/: lib.rs
static/: index.html  main.js
