[package]
name = "rust-webgl-engine-boilerplate"
version = "0.1.0"
authors = ["ibaryshnikov <baryshnikov.il@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.10"
wasm-bindgen = "0.2.33"

[dependencies.web-sys]
version = "0.3.10"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
