[package]
name = "webgl-boilerplate"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "=0.3.77"
wasm-bindgen = "=0.2.100"

[dependencies.web-sys]
version = "=0.3.77"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
